fix(web): Correct page height too small

--- a/packages/web/src/index.css
+++ b/packages/web/src/index.css
@@ -11,6 +11,7 @@ body {
 #root {
   display: flex;
   height: 100%;
+  min-height: 100vh;
 }
 
 body,
